[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://GameTheme.tres" type="Theme" id=2]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 0.137255, 0.137255, 0.137255, 1 )

[sub_resource type="CubeMesh" id=2]
material = SubResource( 1 )
size = Vector3( 42, 0.8, 40 )

[sub_resource type="CubeMesh" id=3]
size = Vector3( 40, 8, 1 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 42, 0.8, 10 )

[sub_resource type="CubeMesh" id=5]
size = Vector3( 3, 0.8, 20 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.0156863, 0, 0.458824, 1 )

[node name="MainMenu" type="Spatial"]
script = ExtResource( 1 )

[node name="Building" type="Node" parent="."]

[node name="Floor" type="MeshInstance" parent="Building"]
mesh = SubResource( 2 )
material/0 = null

[node name="Wall" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.41521, -19.5222 )
mesh = SubResource( 3 )
material/0 = null

[node name="Wall2" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 4.41521, 19.5102 )
mesh = SubResource( 3 )
material/0 = null

[node name="Wall3" type="MeshInstance" parent="Building"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -20.4238, 4.41521, -0.00603104 )
mesh = SubResource( 3 )
material/0 = null

[node name="Wall4" type="MeshInstance" parent="Building"]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 20.4717, 4.41521, 0.0136423 )
mesh = SubResource( 3 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.80335, 15.0708 )
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 8.80335, -15.0239 )
mesh = SubResource( 4 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -19.4524, 8.77191, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance4" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -13.3524, 8.77191, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance5" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -7.30577, 8.77191, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance6" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.872775, 8.77191, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance7" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.22255, 8.77191, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance8" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12.3654, 8.77191, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="MeshInstance9" type="MeshInstance" parent="Building"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 19.4567, 8.77191, 0 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( 1, 0, 0, 0, 0.256981, 0.966416, 0, -0.966416, 0.256981, 0, 12.3546, 0 )
shadow_enabled = true

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, 0, 3.53226, 0 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 3.0
margin_top = 531.665
margin_right = 1279.0
margin_bottom = 717.665
custom_constants/separation = 50
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer" type="Button" parent="HBoxContainer"]
margin_left = 414.0
margin_right = 498.0
margin_bottom = 186.0
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CustomGame" type="Button" parent="HBoxContainer"]
margin_left = 548.0
margin_right = 658.0
margin_bottom = 186.0
text = "Custom Games"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Settings" type="Button" parent="HBoxContainer"]
margin_left = 708.0
margin_right = 771.0
margin_bottom = 186.0
text = "Settings"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="HBoxContainer"]
margin_left = 821.0
margin_right = 861.0
margin_bottom = 186.0
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="."]
margin_left = 500.825
margin_top = 242.872
margin_right = 619.825
margin_bottom = 262.872
theme = ExtResource( 2 )
text = "Maps"
expand_icon = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="HBoxContainer/Multiplayer" to="." method="_on_Multiplayer_pressed"]
[connection signal="pressed" from="HBoxContainer/CustomGame" to="." method="_on_CustomGame_pressed"]
[connection signal="pressed" from="HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="HBoxContainer/Quit" to="." method="_on_Quit_pressed"]
